# x-comments

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Goal.txt  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  goalmerge2.txt  mergegoal.txt  pyproject.toml  x-comments.code-workspace  xianyu_account_safety_red_lines.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260711_0001_initial.py  20260715_0002_catalog_keywords.py  20260715_0003_expand_catalog_keywords.py  20260716_0004_catalog_sync.py  20260716_0005_unique_inflight_keyword.py  20260722_0007_catalog_image_urls.py  (+2 more)
app/: __init__.py  main.py
docs/: api.md  architecture.md  data-model.md  goal-2-headless-access-blocked.md  implementation-plan.md  known-limitations.md  live-test-report.md  operations.md  reference-research.md  xianyu-account-guard.md
scripts/: audit_live_items.py  backup_postgres.sh  calibrate_procurement_chat_dom.py  check_chinese_docstrings.py  check_deployment_health.sh  debug_search_access.py  login_xianyu.py  run_crawl_once.py  verify_postgres_backup_restore.sh
tests/: __init__.py  conftest.py  test_api.py  test_catalog_sync.py  test_chat_client.py  test_config.py  test_detail_images.py  test_item_verification.py  test_parser.py  test_procurement_ai.py  test_procurement_api.py  test_procurement_contract.py  test_procurement_orchestrator.py  test_procurement_outbox_dispatcher.py  test_procurement_policy.py  test_repository.py  test_risk_control.py  test_scheduler.py  test_xianyu_account_guard.py
(+79 files in other folders)
