[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xianyu-comments-poc"
version = "0.1.0"
description = "闲鱼关键词商品采集闭环 POC"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "playwright>=1.55,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]

[tool.setuptools.package-data]
app = ["static/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "postgresql: 需要已经运行且已执行 Alembic 迁移的 PostgreSQL 集成环境",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["alembic"]
